Fix: Fix overlapping div issues

--- a/css/index.css
+++ b/css/index.css
@@ -173,6 +173,7 @@ p {
   position: fixed;
   background: black;
   width: 0%;
+  opacity: 0;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -216,10 +217,13 @@ p {
   text-align: center;
 }
 .search-section .find-illustrative-image {
-  margin: 2rem auto;
+  margin: 10px auto;
+  width: 100%;
+  height: 50%;
 }
 .search-section .find-illustrative-image img {
   width: 100%;
+  height: 100%;
 }
 .search-section .searchpane {
   margin-top: 2rem;
@@ -248,6 +252,7 @@ p {
 .interests {
   border: 1px solid black;
   margin-top: 2rem;
+  position: relative;
 }
 .interests .intro-note h1 {
   font-size: 2.5rem;
