--- a/search-section/search-section.less
+++ b/search-section/search-section.less
@@ -11,9 +11,12 @@
     }
 
     .find-illustrative-image {
-        margin:  @medium-margin auto;
+        margin:  10px auto;
+        width: 100%;
+        height: 50%;
         img {
             width: 100%;
+            height: 100%;
         }
     }
 
